--- a/sass/main.css
+++ b/sass/main.css
@@ -4,15 +4,18 @@
   box-sizing: border-box;
 }
 
+.general, body {
+  background-color: rgba(221, 221, 221, 0.8666666667);
+  height: 100%;
+  margin: 0;
+}
+
 html {
   height: 100%;
   margin: 0;
 }
 
 body {
-  background-color: rgba(77, 2, 2, 0.867);
-  height: 100%;
-  margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
