--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,9 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+main {
+  flex: 1;
+}
 
 h1 {
   font-style: oblique;
@@ -33,7 +36,7 @@ h1 {
   text-align: center;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: bold;
   font-style: normal;
   opacity: 0;
   transform: translateY(30px);
