--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,11 +1,9 @@
+@use "variables" as *;
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-$color-secundario: #333; // VARIABLES
-
 .general,
 body {
   background-color: rgba(221, 221, 221, 0.8666666667);
